# MSz

./: .gitignore  CMakeLists.txt  MSzConfig.cmake.in  README.md
.github/workflows/: build.yml
examples/: ex1_MSz_count_faults.cpp  ex2_MSz_derive_apply_edits.cpp
examples/python/: example_msz_cuda.py
include/api/: MSz.cpp  MSz.h
include/internal/MSz_CUDA/: MSz.cu
include/internal/MSz_Global/: MSz_globals.h
include/internal/MSz_OMP/: MSz_omp.cpp  MSz_omp.h
include/internal/MSz_Serial/: MSz_serial.cpp
include/internal/MSz_global/: MSz_globals.cpp
result/: result_at_sz3_detailed.txt  result_inputdata100_sz3_detailed.txt
src/api/: MSz.cpp
src/cli/: MSz_CLI.cpp
src/internal/: msz_config.h.in
src/internal/MSz_CUDA/: MSz_CUDA.cu  MSz_CUDA.h
src/internal/MSz_Global/: MSz_globals.cpp  MSz_globals.h
src/internal/MSz_OMP/: MSz_omp.cpp  MSz_omp.h
src/internal/MSz_Serial/: MSz_serial.cpp  MSz_serial.h
src/python/: msz_py.cpp
